# gltf2sf

./: .gitignore  CMakeLists.txt  README.md  genfbs.bat
src/: Accessor.cpp  Accessor.h  ParseCamera.cpp  ParseCamera.h  ParseLight.cpp  ParseLight.h  ParseMaterial.cpp  ParseMaterial.h  ParseMesh.cpp  ParseMesh.h  ParseNode.cpp  ParseNode.h  gltfToSFscene.cpp  gltfToSFscene.h  main.cpp  tool.h
